@@ -38,8 +38,7 @@ import java.beans.PropertyChangeEvent;
 
 import java.io.IOException;
 
-import java.text.DecimalFormat;
-
+import java.util.Formatter;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -57,9 +56,9 @@ import java.util.Properties;
  * port used is 43010.
  * <p>
  * The <code>com.sun.sgs.impl.profile.listener.SnapshotTaskListener.</code>
- * root is used for all properties in this class. The <code>reportPort</code>
+ * root is used for all properties in this class. The <code>report.port</code>
  * key is used to specify an alternate port on which to report profiling
- * data. The <code>reportPeriod</code> key is used to specify the length of
+ * data. The <code>report.period</code> key is used to specify the length of
  * time, in milliseconds, between reports.
  */
 public class SnapshotTaskListener implements ProfileListener {
@@ -82,12 +81,6 @@ public class SnapshotTaskListener implements ProfileListener {
 
     private HashMap<String,TaskDetail> map;
 
-    static final DecimalFormat df = new DecimalFormat();
-    static {
-        df.setMaximumFractionDigits(2);
-        df.setMinimumFractionDigits(2);
-    }
-
     /**
      * Creates an instance of {@code RuntimeHistogramListener}.
      *
@@ -98,7 +91,7 @@ public class SnapshotTaskListener implements ProfileListener {
      *        running short-lived or recurring tasks
      * @param resourceCoord the {@code ResourceCoordinator} used to
      *        run any long-lived tasks
-     *
+     * @throws IOException if the server socket cannot be created
      * @throws IOException if the socket where data will be published 
      *                     cannot be created
      */
@@ -152,10 +145,9 @@ public class SnapshotTaskListener implements ProfileListener {
                     detail.retries += profileReport.getRetryCount();
 		    for (ProfileOperation op :
                               profileReport.getReportedOperations()) {
-			 Long l = null;
-			 detail.ops.put(op, ((l = detail.ops.get(op)) == null)
-					? new Long(1)
-					: l.longValue() + 1);
+			 Long l = detail.ops.get(op);
+			 detail.ops.put(
+			     op, Long.valueOf(l == null ? 1 : l + 1));
 		    }		    
                 }
             }
@@ -179,17 +171,20 @@ public class SnapshotTaskListener implements ProfileListener {
         public String toString() {
             double avgTime = (double)time / (double)count;
             double avgOps = (double)opCount / (double)count;
-            String str = " avgTime=" + df.format(avgTime) + "ms avgOps=" +
-                df.format(avgOps) + " [" + count + "/" + retries + "]";
+	    Formatter formatter = new Formatter();
+	    formatter.format(" avgTime=%2.2fms", avgTime);
+	    formatter.format(" avgOps=%2.2f", avgOps);
+	    formatter.format(" [%d/%d]", count, retries);
             if (opCount > 0)
-                str += "\n  ";
+		formatter.format("%n  ");
 	    for (ProfileOperation op : ops.keySet()) {
-		str += op + "=" +
-		    df.format(100.0 * (double)(ops.get(op).longValue()) / 
-			      (double)opCount) +
-		    "% " ;
+		formatter.format(
+		    "%s=%2.2f%% ",
+		    op,
+		    100.0 * (double)(ops.get(op).longValue()) / 
+		    (double)opCount);
 	    }		 
-            return str;
+            return formatter.toString();
         }
     }
 
@@ -201,14 +196,15 @@ public class SnapshotTaskListener implements ProfileListener {
             return TaskRunnable.class.getName();
         }
         public void run() throws Exception {
-            String reportStr = "";
+            Formatter reportStr = new Formatter();
             synchronized (map) {
                 for (Entry<String,TaskDetail> entry : map.entrySet())
-                    reportStr += entry.getKey() + entry.getValue() + "\n";
+		    reportStr.format(
+			"%s%s%n", entry.getKey(), entry.getValue());
                 map.clear();
             }
-            reportStr += "\n";
-            networkReporter.report(reportStr);
+            reportStr.format("%n");
+            networkReporter.report(reportStr.toString());
         }
     }
 
